--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "bignumber.js": "^4.0.2",
     "eth-sig-util": "^1.2.2",
+    "ethereumjs-testrpc": "^6.0.3",
     "ethereumjs-util": "^5.1.2",
     "ethjs": "^0.2.7",
-    "web3": "^0.20.1",
-    "solc": "^0.4.18"
+    "solc": "^0.4.18",
+    "web3": "^0.20.1"
   }
 }
