--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "devDependencies": {},
   "dependencies": {
     "bignumber.js": "^4.0.2",
+    "browserify": "^14.5.0",
     "eth-sig-util": "^1.2.2",
     "ethereumjs-testrpc": "^6.0.3",
     "ethereumjs-util": "^5.1.2",
     "ethjs": "^0.2.7",
     "solc": "^0.4.18",
-    "web3": "^0.20.1"
+    "web3": "^0.20.2"
   }
 }
