added communication between the background, popup and content scripts

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -24,8 +24,11 @@
 				"<all_urls>"
 			],
 
-			"js": ["jquery-3.2.1.min.js", "content.js", "ethpass.js"]
+			"js": ["jquery-3.2.1.min.js", "content.js"]
 		}
+	],
+	"web_accessible_resources" : [
+		"get_variables.js"
 	]
 
 }
