--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "http-server": "^0.10.0"
   },
   "dependencies": {
+    "aes-js": "^3.1.0",
     "bignumber.js": "^4.0.2",
     "eth-sig-util": "^1.2.2",
     "ethereumjs-util": "^5.1.2",
     "ethjs": "^0.2.7",
-    "web3": "^0.20.1",
-    "solc": "^0.4.18"
+    "solc": "^0.4.18",
+    "web3": "^0.20.1"
   }
 }
