--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "ethereumjs-testrpc": "^6.0.3",
     "ethereumjs-util": "^5.1.2",
     "ethjs": "^0.2.7",
+    "http-server": "^0.10.0",
+    "node-dev-server": "0.0.1",
     "solc": "^0.4.18",
     "web3": "^0.20.2"
   }
