--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "aes-js": "^3.1.0",
     "bignumber.js": "^4.0.2",
+    "bootstrap": "^3.3.7",
     "eth-sig-util": "^1.2.2",
     "ethereumjs-util": "^5.1.2",
     "ethjs": "^0.2.7",
