--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "deploy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "browserify -t [ babelify --presets [ react ] ] src/app.js -o build/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,11 +14,16 @@
   },
   "dependencies": {
     "aes-js": "^3.1.0",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^8.0.0",
     "bignumber.js": "^4.0.2",
     "bootstrap": "^3.3.7",
     "eth-sig-util": "^1.2.2",
     "ethereumjs-util": "^5.1.2",
     "ethjs": "^0.2.7",
+    "react": "^16.1.1",
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^16.1.1",
     "solc": "^0.4.18",
     "web3": "^0.20.1"
   }
