--- a/package.json
+++ b/package.json
@@ -10,17 +10,32 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "http-server": "^0.10.0"
+    "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babelify": "^8.0.0",
+    "gulp": "^3.9.1",
+    "gulp-bower": "0.0.13",
+    "gulp-sass": "^3.1.0",
+    "http-server": "^0.10.0",
+    "webpack": "^3.8.1",
+    "uglifyjs-webpack-plugin": "^1.1.1"
   },
   "dependencies": {
     "aes-js": "^3.1.0",
-    "babel-preset-react": "^6.24.1",
-    "babelify": "^8.0.0",
     "bignumber.js": "^4.0.2",
     "bootstrap": "^3.3.7",
+    "classnames": "^2.2.5",
     "eth-sig-util": "^1.2.2",
     "ethereumjs-util": "^5.1.2",
     "ethjs": "^0.2.7",
+    "mobx": "^3.3.2",
+    "mobx-react": "^4.3.5",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
