--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
     "solc": "^0.4.18",
-    "web3": "^0.20.1"
+    "web3": "^0.20.1",
+    "zxcvbn": "^4.4.2"
   }
 }
