--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eth-sig-util": "^1.2.2",
     "ethereumjs-util": "^5.1.2",
     "ethjs": "^0.2.7",
+    "generate-password": "^1.3.0",
     "mobx": "^3.3.2",
     "mobx-react": "^4.3.5",
     "react": "^16.1.1",
