--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ethereumjs-util": "^5.1.2",
     "ethjs": "^0.2.7",
     "generate-password": "^1.3.0",
+    "history": "^4.7.2",
     "mobx": "^3.3.2",
     "mobx-react": "^4.3.5",
     "react": "^16.1.1",
