--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "history": "^4.7.2",
     "mobx": "^3.3.2",
     "mobx-react": "^4.3.5",
+    "msgpack-lite": "^0.1.26",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
